# Naive-Bayes-classifier

./: CMakeLists.txt  main.cpp
Algorithm/: Algorithm.cpp  Algorithm.h  Algorithm.hpp  CMakeLists.txt
CSVRow/: CMakeLists.txt  CSVRow.cpp  CSVRow.hpp
Node/: CMakeLists.txt  Node.cpp  Node.h
